--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,14 @@
        <a href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</a>
      </li>
    {% else %}
+     {% if message %}
+     <p>{{ message }}</p>
+     {% endif %}
      <li>
-       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">Login with Facebook</a>
+       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}?login_type="login"">Login with Facebook</a>
      </li>
      <li>
-       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">Sign up with Facebook</a>
+       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}?login_type="signup"">Sign up with Facebook</a>
      </li>
    {% endif %}
    </ul>
