--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,2 @@
 <h1>{{ message }}</h1>
-<p><a href="/logout">Logout</a>
+<button type="button" class="btn btn-primary btn-lg" href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</button>
