--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,39 @@
 
-
-
+<!DOCTYPE html>
+<html lang="en">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 {% block main %}
- <div>
- <h1>Facebook authentication</h1>
+ <div class="container">
+ <h1  >Facebook authentication</h1>
 <p>
-   <ul>
+
    {% if user and not user.is_anonymous %}
-     <li>
+     <h3  >
        <a>Hello {{ user.get_full_name|default:user.username }}!</a>
-     </li>
-     <li>
-       <a href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</a>
-     </li>
+     </h3>
+     <div class="container">
+       <a type="button" class="btn btn-primary btn-lg" href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</a>
+     </div>
    {% else %}
      {% if message %}
      <p>{{ message }}</p>
      {% endif %}
-     <li>
-       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}?login_type="login"">Login with Facebook</a>
-     </li>
-     <li>
-       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}?login_type="signup"">Sign up with Facebook</a>
-     </li>
+     <div class="container">
+     <div  class="col-md-4">
+       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}?login_type=2"><img src='http://www.arcadeforge.io/assets/facebook_login-30508b4234d64d8a7294e2d32598137aad5a43ac7026ac419e05bd8c41c4b849.png'>  </a>
+     </div>
+     <div class="col-md-4">
+       <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}?login_type=2"><img src='http://active.eventjini.com/jaipurmarathon/images/signup_fb.png'></a>
+     </div>
+     </div>
    {% endif %}
-   </ul>
- </p>
+ 
  </div>
 {% endblock %}
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+</html>
